[project]
name = "icmpx"
version = "0.1.0"
description = "A simple ICMP library for Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.2.0",
    "textual>=6.2.1",
    "textual-dev>=1.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "taskipy>=1.14.1",
    "ty>=0.0.1a22",
]
